sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:22: error: ')' expected but $XMLSTART$< found.
    while (i <b){
             ^AlgCocktailSort2:41: error: illegal start of simple expression
} while (t == false)
^